Name: HJVM
Version: 0.1
Build-Type: Simple
cabal-version:  >= 1.2
--extra-source-files:  src/libjvm.dll.a

library
  hs-source-dirs:     src 
  build-depends:      base, containers, mtl
  exposed-modules:    Language.Java.JVM.API, Language.Java.JVM.Types
  includes:           src/Language/Java/JVM/hjvm.h
  c-sources:          src/Language/Java/JVM/hjvm.c
  extra-libraries:    jvm
  extra-lib-dirs:    d:\dev\java\jdk1.6.0_07\jre\bin\client
--  d:\Documents\perso\workspace\HJVM\src 
  include-dirs:       d:\dev\java\jdk1.6.0_07\include d:\dev\java\jdk1.6.0_07\include\win32
  ghc-options:        -O2 -Wall

